--- a/index.html
+++ b/index.html
@@ -369,61 +369,62 @@
         </button>
     </form>
 </div>
+</div>
 </footer>
-<div class="modal-overlay ">
-<div class="modal">
-    <button class="close-button" type="button">
-        <svg class="icons-close" width="8" height="8">
-            <use href="./images/icons.svg#icon-close-black"></use>
-        </svg>
-    </button>
-    <p class="modal-text">Leave your contacts and we will call you back</p>
-    <form class="form-adress">
-        <div class="form-contacts">
-            <label class="label" for="user-name">Name</label>
-            <div class="form-contacts-container">
-                <input type="text" class="input" id="user-name" name="user-name">
-                <svg class="icon-image" width="18" height="24">
-                    <use href="./images/icons.svg#icon-person-black"></use>
-                </svg>
-            </div>
-        </div>
-        <div class="form-contacts">
-            <label class="label" for="user-phone">Phone</label>
-            <div class="form-contacts-container">
-                <input type="text" class="input" id="user-phone" name="user-phone">
-                <svg class="icon-image" width="18" height="24">
-                <use href="./images/icons.svg#icon-phone-black"></use>
-                </svg>
-            </div>
-        </div>
-        <div class="form-contacts">
-            <label class="label" for="user-email">Email</label>
-            <div class="form-contacts-container">
-                <input type="text" class="input" id="user-email" name="user-email">
-                <svg class="icon-image" width="18" height="24">
-                    <use href="./images/icons.svg#icon-email-black"></use>
-                </svg>
-            </div>
-        </div>
-        <div class="form-contacts-comment">
-            <label class="label" for="user-comment">Comment</label>
-            <textarea class="input-comment" id="user-comment" name="user-comment" rows="5" placeholder="Text input"></textarea>
-        </div>
-        <div class="privacy-container">
-            <input type="checkbox" id="user-privacy" value="true" name="user-privacy" class="visually-hidden">
-            <label for="user-privacy" class="checkbox">
-                <span class="label-checkbox">
-                    <svg class="icon-checkbox" width="10" height="8">
-                        <use href="./images/icons.svg#icon-vector-1"></use>
+<div class="modal-overlay is-open">
+    <div class="modal">
+        <button class="close-button" type="button">
+            <svg class="icons-close" width="8" height="8">
+                <use href="./images/icons.svg#icon-close-black"></use>
+            </svg>
+        </button>
+        <p class="modal-text">Leave your contacts and we will call you back</p>
+        <form class="form-adress">
+            <div class="form-contacts">
+                <label class="label" for="user-name">Name</label>
+                <div class="form-contacts-container">
+                    <input type="text" class="input" id="user-name" name="user-name">
+                    <svg class="icon-image" width="18" height="24">
+                        <use href="./images/icons.svg#icon-person-black"></use>
                     </svg>
-                </span>
-                I accept the terms and conditions of the<a href="" class="privacy">Privacy Policy</a>
-            </label>
-        </div>
-        <button class="button-send" type="submit">Send</button>
-    </form>
-</div>
-</div>
+                </div>
+            </div>
+            <div class="form-contacts">
+                <label class="label" for="user-phone">Phone</label>
+                <div class="form-contacts-container">
+                    <input type="text" class="input" id="user-phone" name="user-phone">
+                 <svg class="icon-image" width="18" height="24">
+                    <use href="./images/icons.svg#icon-phone-black"></use>
+                 </svg>
+                </div>
+            </div>
+            <div class="form-contacts">
+                <label class="label" for="user-email">Email</label>
+                <div class="form-contacts-container">
+                    <input type="text" class="input" id="user-email" name="user-email">
+                    <svg class="icon-image" width="18" height="24">
+                        <use href="./images/icons.svg#icon-email-black"></use>
+                    </svg>
+                </div>
+            </div>
+            <div class="form-contacts-comment">
+                <label class="label" for="user-comment">Comment</label>
+                <textarea class="input-comment" id="user-comment" name="user-comment" rows="5" placeholder="Text input"></textarea>
+            </div>
+            <div class="privacy-container">
+                <input type="checkbox" id="user-privacy" value="true" name="user-privacy" class="visually-hidden">
+                <label for="user-privacy" class="checkbox">
+                    <span class="label-checkbox">
+                        <svg class="icon-checkbox" width="10" height="8">
+                            <use href="./images/icons.svg#icon-vector-1"></use>
+                        </svg>
+                    </span>
+                    I accept the terms and conditions of the<a href="" class="privacy">Privacy Policy</a>
+                </label>
+            </div>
+            <button class="button-send" type="submit">Send</button>
+        </form>
+    </div>
+  </div>
 </body>
 </html>
