--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 </div>
 </div>
 </footer>
-<div class="modal-overlay is-open">
+<div class="modal-overlay ">
     <div class="modal">
         <button class="close-button" type="button">
             <svg class="icons-close" width="8" height="8">
